Natter Changelog

Version: 4.10.0
Codename: Ingress
Date: April 20, 2009
 - Massively overhauled the session system.
    - Now uses DBI and DBD::SQLite to store sessions.
    - Sessions can not be migrated.  Users will be kicked out after the upgrade
      and must re-enter the chat password and re-COPPA-ize.  Don't upgrade when
      people are using the chat, and they'll never notice.
    - Sessions are now 12 hours in length.  Users with a session cookie that
      return to the chat after more than 12 hours may be asked to re-enter.
    - All previous cookies have been retired in favor of the session cookie.
    - Bots and Proxies may be impacted.  See notes below.
 - Massively overhauled the ban system.
    - Now uses DBI and DBD::SQLite to store bans.
    - Migration of old bans will occur on the first login to the guard frameset.
    - Session bans are now recorded in the ban logs.
    - Session bans are now limited to 12 hours in length.
    - Lifted, cleared bans are no longer deleted from the ban log.  They may now
      be viewed by using links on the ban log page.
 - Refactored the internal script structures.  Script output is now done through
   a single established code path.  Output is now accompanied with extra
   informative HTTP headers.  This may help eliminate the "the server is telling
   me to download chat3.cgi" problem.
 - Bot and Proxy behavior may be impacted by this update.
    - The cookie changes may throw off code behavior.  If you have been looking
	  for and setting the individual "sanity", "COPPA", and "password" cookies,
	  you'll need to stop doing that.  Sanity state is kept in the session,
	  as is COPPA and password information.
	- Best practice would be to simply accept any cookie sent from the script.
	- Your code should post at least once an hour, if the user is inactive, to
	  maintain session activity.  A simple GET of action=post should work.


---- Older Versions ----


Version: 4.9.3
Date: April 15, 2009